:poop: try to use CMU but not german model available

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ SpeechRecognition==3.8.1
 playsound==1.2.2
 beautifulsoup4==4.8.0
 pypiwin32==223; sys_platform == 'win32'
+
+#TODO:PocketSphinx for PocketSphinx PocketSphinx-0.1.15
